fix: adjust padding in LecturerRatings section and increase gap in Feedbacks Card for improved layout

--- a/src/assets/styles/vendor.css
+++ b/src/assets/styles/vendor.css
@@ -1,3 +1,6 @@
+.slick-dots {
+    bottom: -30px;
+}
 .slick-dots li button {
     display: block;
     width: 14px;
